--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.19",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
