--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hubspot/api-client": "^10.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@tawk.to/tawk-messenger-react": "^2.0.2",
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
