--- a/package.json
+++ b/package.json
@@ -12,24 +12,31 @@
     "@hubspot/api-client": "^10.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-email/components": "^0.0.7",
     "@tawk.to/tawk-messenger-react": "^2.0.2",
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
+    "eslint": "^8.47.0",
+    "eslint-config-next": "^13.4.19",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
+    "googleapis": "^126.0.1",
     "lucide-react": "^0.284.0",
+    "mailersend": "^2.2.0",
     "next": "13.5.4",
+    "nodemailer": "^6.9.6",
     "react": "latest",
     "react-dom": "latest",
+    "react-email": "^1.9.5",
+    "resend": "^1.1.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "latest",
+    "@types/nodemailer": "^6.4.11",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "^10.4.16",
